--- a/Video_IMU_Recorder/app/src/main/AndroidManifest.xml
+++ b/Video_IMU_Recorder/app/src/main/AndroidManifest.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-feature  android:name="android.hardware.camera"  android:required="true"/>
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
+
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
@@ -13,6 +17,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Video_IMU_Recorder"
         tools:targetApi="31">
+        <activity
+            android:name=".BurstImage"
+            android:exported="false"
+            android:screenOrientation="landscape"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
 
         <provider
             android:name="androidx.core.content.FileProvider"
