Established server localization requests; modularized IMU calculations

--- a/Video_IMU_Recorder/settings.gradle
+++ b/Video_IMU_Recorder/settings.gradle
@@ -15,3 +15,4 @@ dependencyResolutionManagement {
 rootProject.name = "Video_IMU_Recorder"
 include ':app'
 include ':baseline'
+include ':imu_processing'
