--- a/Video_IMU_Recorder/app/build.gradle
+++ b/Video_IMU_Recorder/app/build.gradle
@@ -31,6 +31,7 @@ android {
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation project(path: ':imu_processing')
     // CameraX core library using the camera2 implementation
     def camerax_version = "1.2.3"
     implementation "androidx.camera:camera-camera2:${camerax_version}"
