--- a/Video_IMU_Recorder/imu_processing/build.gradle
+++ b/Video_IMU_Recorder/imu_processing/build.gradle
@@ -5,8 +5,19 @@ plugins {
 java {
     sourceCompatibility = JavaVersion.VERSION_11
     targetCompatibility = JavaVersion.VERSION_11
+    /*
+    'META-INF/DEPENDENCIES'
+    'META-INF/LICENSE.md'
+    'META-INF/LICENSE-notice.md'
+    */
 }
 
 dependencies {
     implementation 'org.apache.commons:commons-math3:3.6.1'
+    /*
+    implementation ('com.github.psambit9791:jdsp:2.0.1') {
+        exclude group: 'org.apache.maven.surefire', module: 'common-java5'
+        exclude group: 'org.apache.maven.surefire', module: 'surefire-api'
+    }
+    */
 }
